5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1643_2703.log
== TEST (2019-04-08 18:09:59) 
-- CODE:
idade = int(input("Idade: "))

if (idade => 18):
	print ("eleitor")
	
else: 
	print("nao_eleitor")
	
-- ERROR:
File "XXXX", line 3
    if (idade => 18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:10:15) 
-- CODE:
idade = int(input("Idade: "))

if (idade > 18):
	print ("eleitor")
	
else: 
	print("nao_eleitor")
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:11:02) 
-- CODE:
idade = int(input("Idade: "))

if (idade >= 18):
	print ("eleitor")
	
else: 
	print("nao_eleitor")
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:11:07) 
-- CODE:
idade = int(input("Idade: "))

if (idade >= 18):
	print ("eleitor")
	
else: 
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.18091
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
